--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,8 @@ img {
     font-weight: 600;
     font-size: 1rem;
     transition: all 0.3s ease;
+    color: whitesmoke;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .signup-btn {
