--- a/css/style.css
+++ b/css/style.css
@@ -1107,7 +1107,7 @@ textarea.form-control {
 .back-link {
     display: inline-block;
     margin-bottom: 15px;
-    color: #4a6fa5;
+    color: black;
     text-decoration: none;
     font-weight: 600;
 }
